--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,14 @@
     <string name="input_usuario">Usuario</string>
     <string name="input_contrasena">Contraseña</string>
     <string name="button_ingresar">Ingresar</string>
-    <string name="labe_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
+    <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
 
     <!--Menú-->
-    <string name="open_nav">Open Navigation Drawer</string>
-    <string name="close_nav">Close Navigation Drawer</string>
+    <string name="nombre_usuario">Juan Camilo Sanchez Perez</string>
+    <string name="cargo_usuario">Administrador de Nómina</string>
+    <string name="area_usuario">Nómina</string>
+    <string name="button_empleado">Empleado</string>
+    <string name="button_area">Área</string>
+    <string name="button_liquidacion">Liquidación</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
