--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,39 @@
     <string name="input_contrasena">Contraseña</string>
     <string name="button_ingresar">Ingresar</string>
     <string name="labe_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
-    <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>    <!--Menú-->
+    <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
+    <!--Menú-->
     <string name="nombre_usuario">Juan Camilo Sanchez Perez</string>
     <string name="cargo_usuario">Administrador de Nómina</string>
     <string name="area_usuario">Nómina</string>
     <string name="button_empleado">Empleado</string>
     <string name="button_area">Área</string>
     <string name="button_liquidacion">Liquidación</string>
+    <string name="button_cerrarsesion">Cerrar Sesión</string>
+    <!--Liquidación-->
+    <string name="label_liquidacion">Liquidación</string>
+    <string name="button_liquidacion_tiempo_completo">Liquidación Tiempo Completo</string>
+    <string name="button_liquidacion_por_dias">Liquidación por Días</string>
+    <string name="label_fecha_inicio_liquidar">1. FECHA DE INICIO DEL PERIODO A LIQUIDAR</string>
+    <string name="label_fecha_final_liquidar">2. FECHA DE FINAL DEL PERIODO A LIQUIDAR</string>
+    <string name="label_salario">3. INGRESE SU SALARIO MENSUAL</string>
+    <string name="label_dias_laborados_semana">4. DIAS LABORADOS SEMANA</string>
+    <string name="label_auxilio_transporte_dias">5. ¿TIENE DERECHO A UN AUXILIO DE TRANSPORTE?</string>
+    <string name="label_auxilio_transporte">4. ¿TIENE DERECHO A UN AUXILIO DE TRANSPORTE?</string>
+    <string name="label_clase">5. Seleccione la clase de riesgos laborales correspondiente al sector de actividad y al cargo del trabajador.</string>
+    <string name="label_clase_dias">6. Seleccione la clase de riesgos laborales correspondiente al sector de actividad y al cargo del trabajador.</string>
+    <string name="button_liquidacion_para_empleado">Liquidación para Empleado</string>
+    <string name="button_liquidacion_para_empleador">Liquidación para Empleador</string>
+    <string name="button_fecha_defecto">01/01/2024</string>
+    <string name="edittext_salario_mensual_defecto">1300000</string>
+    <string name="edittext_salario_diario_defecto">43333</string>
+    <string name="edittext_dias_defecto">48</string>
+    <!--Empleado-->
+    <string name="label_empleado">Empleado</string>
+
+
+    <!--Area-->
+    <string name="label_area">Área</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
