--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
     <!--Inicio sesion-->
-    <string name="app_name">Nomina App</string>
+    <string name="app_name">Nómina App</string>
     <string name="label_inicio">Inicio de sesión</string>
     <string name="input_usuario">Usuario</string>
     <string name="input_contrasena">Contraseña</string>
     <string name="button_ingresar">Ingresar</string>
     <string name="labe_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
     <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
+
+    <!--Restablecer contraseña-->
+    <string name="label_restablecer_contrasena">Restablecer Contraseña</string>
+    <string name="input_correo_electronico">Correo Electrónico</string>
+    <string name="input_confirmar_correo_electronico">Confirmar Correo Electrónico</string>
+    <string name="button_restablecer_contrasena">Enviar</string>
+
     <!--Menú-->
     <string name="nombre_usuario">Juan Camilo Sanchez Perez</string>
     <string name="cargo_usuario">Administrador</string>
@@ -15,6 +22,7 @@
     <string name="button_area">Área</string>
     <string name="button_liquidacion">Liquidación</string>
     <string name="button_cerrarsesion">Cerrar Sesión</string>
+
     <!--Liquidación-->
     <string name="label_liquidacion">Liquidación</string>
     <string name="button_liquidacion_tiempo_completo">Liquidación Tiempo Completo</string>
@@ -35,6 +43,7 @@
     <string name="edittext_dias_defecto">48</string>
     <string name="button_guardar_liquidacion">Guardar</string>
     <string name="button_cancelar_liquidacion">Cancelar</string>
+
     <!--Empleado-->
     <string name="label_empleado">Empleado</string>
     <string name="button_guardar_empleado">Guardar</string>
