[CONFIG] se realiza configuración en general para que la opción atras de los dispositivos no funcione si no que solo funcione con los botones de la aplicación, se realiza la configuración del formulario area

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,8 +50,8 @@
 
     <!--Empleado-->
     <string name="label_empleado">Empleado</string>
-    <string name="button_guardar_empleado">Guardar</string>
-    <string name="button_cancelar_empleado">Cancelar</string>
+    <string name="button_guardar">Guardar</string>
+    <string name="button_cancelar">Cancelar</string>
     <string name="button_editar">Editar</string>
     <string name="button_borrar">Borrar</string>
     <string name="button_activar">Estado</string>
@@ -72,6 +72,8 @@
 
     <!--Area-->
     <string name="label_area">Área</string>
+    <string name="input_codigo_area">Código Área</string>
+    <string name="input_nombre_area">Nombre Área</string>
 
 
     <!--Colilla-->
