--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,20 @@
     <string name="button_ingresar">Ingresar</string>
     <string name="labe_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
     <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
+    <string name="label_registrarse_app">¿No tienes cuenta?</string>
 
     <!--Restablecer contraseña-->
     <string name="label_restablecer_contrasena">Restablecer Contraseña</string>
     <string name="input_correo_electronico">Correo Electrónico</string>
     <string name="input_confirmar_correo_electronico">Confirmar Correo Electrónico</string>
     <string name="button_restablecer_contrasena">Enviar</string>
-
+    
+    <!--Registrarse-->
+    <string name="label_registrarse">Resgistrarse</string>
+    <string name="input_correo_electronico_registrarse">Correo Electrónico</string>
+    <string name="input_contrasena_registrarse">Contraseña</string>
+    <string name="button_registrarse">Enviar</string>
+    
     <!--Menú-->
     <string name="nombre_usuario">Juan Camilo Sanchez Perez</string>
     <string name="cargo_usuario">Administrador</string>
