[CONFIG] se agrega la funcionalidad de crear registros de los empleados y que se almacen en el Firestore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="input_tipo_salario_empleado">Tipo Salario</string>
     <string name="input_salario_empleado">Salario</string>"
     <string name="input_rol_empleado">Rol</string>
+    <string name="input_id_empleado">ID Empleado</string>
     <string name="input_contrasena_empleado">Contraseña</string>
 
     <!--Instrucciones-->
